--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,16 @@
+@import 'antd/dist/reset.css';
+@import "slick-carousel/slick/slick.css";
+@import "slick-carousel/slick/slick-theme.css";
+
 body {
   margin: 0;
   background-origin: border-box;
   padding: 0;
+  background-color: #fff9f9;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif
 }
 
 html {
   font-size: 62.5%;
 }
+
